src/pre_push/snapshots/gherrit__pre_push__body__tests__metadata_is_json_escaped.snap
---
source: src/pre_push/body.rs
expression: "metadata_comment(\"G\\\"雪\", Some(\"parent\\\\branch\"), Some(\"child\\nline\"),)"
---
<!-- gherrit-meta: {"id":"G\"雪","parent":"parent\\branch","child":"child\nline"} -->
