src/pre_push/snapshots/gherrit__pre_push__body__tests__renders_full_patch_history.snap
---
source: src/pre_push/body.rs
expression: "body(\"Finish the stack\\n\\n\", None, 33, 4, \"Gtip\", \"Gmiddle\").render()"
---
<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->

Finish the stack



---

- 👉 #33
- 　  #22
- 　  #11


**Latest Update:** v4 — [Compare vs v3](/octo/widgets/compare/gherrit/Gtip/v3..gherrit/Gtip/v4)

<details>
<summary><strong>📚 Full Patch History</strong></summary>

*Links show the diff between the row version and the column version.*

|Version| v3 | v2 | v1 |Base|
|:---|:---|:---|:---|:---|
|v4|[vs v3](/octo/widgets/compare/gherrit/Gtip/v3..gherrit/Gtip/v4)|[vs v2](/octo/widgets/compare/gherrit/Gtip/v2..gherrit/Gtip/v4)|[vs v1](/octo/widgets/compare/gherrit/Gtip/v1..gherrit/Gtip/v4)|[vs Base](/octo/widgets/compare/Gmiddle..gherrit/Gtip/v4)|
|v3||[vs v2](/octo/widgets/compare/gherrit/Gtip/v2..gherrit/Gtip/v3)|[vs v1](/octo/widgets/compare/gherrit/Gtip/v1..gherrit/Gtip/v3)|[vs Base](/octo/widgets/compare/Gmiddle..gherrit/Gtip/v3)|
|v2|||[vs v1](/octo/widgets/compare/gherrit/Gtip/v1..gherrit/Gtip/v2)|[vs Base](/octo/widgets/compare/Gmiddle..gherrit/Gtip/v2)|
|v1||||[vs Base](/octo/widgets/compare/Gmiddle..gherrit/Gtip/v1)|

</details>
<details>
<summary><strong>⬇️ Download this PR</strong></summary>

######

**Branch**
```bash
git fetch origin refs/heads/Gtip && git checkout -b pr-Gtip FETCH_HEAD
```

**Checkout**
```bash
git fetch origin refs/heads/Gtip && git checkout FETCH_HEAD
```

**Cherry Pick**
```bash
git fetch origin refs/heads/Gtip && git cherry-pick FETCH_HEAD
```

**Pull**
```bash
git pull origin refs/heads/Gtip
```

</details>

*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*
