src/pre_push/snapshots/gherrit__pre_push__body__tests__renders_public_middle_at_v2_with_unicode.snap
---
source: src/pre_push/body.rs
expression: "body(\"Render 雪 correctly ☃️\\n\\nKeep `code`, [links](https://example.com/?a=1&b=2), and <tags>.\\n\\ngherrit-pr-id: Gmiddle\",\nSome(\"feature/雪-and-markdown\"), 22, 2, \"Gmiddle\", Some(\"Groot\"),\nSome(\"Gtip\"),).render()"
---
<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->

Render 雪 correctly ☃️

Keep `code`, [links](https://example.com/?a=1&b=2), and <tags>.



---

This PR is on branch [feature/雪-and-markdown](../tree/feature/雪-and-markdown).

- 　  #33
- 👉 #22
- 　  #11


**Latest Update:** v2 — [Compare vs v1](/octo/widgets/compare/gherrit/Gmiddle/v1..gherrit/Gmiddle/v2)

<details>
<summary><strong>📚 Full Patch History</strong></summary>

*Links show the diff between the row version and the column version.*

|Version| v1 |Base|
|:---|:---|:---|
|v2|[vs v1](/octo/widgets/compare/gherrit/Gmiddle/v1..gherrit/Gmiddle/v2)|[vs Base](/octo/widgets/compare/Groot..gherrit/Gmiddle/v2)|
|v1||[vs Base](/octo/widgets/compare/Groot..gherrit/Gmiddle/v1)|

</details>
<details>
<summary><strong>⬇️ Download this PR</strong></summary>

######

**Branch**
```bash
git fetch origin refs/heads/Gmiddle && git checkout -b pr-Gmiddle FETCH_HEAD
```

**Checkout**
```bash
git fetch origin refs/heads/Gmiddle && git checkout FETCH_HEAD
```

**Cherry Pick**
```bash
git fetch origin refs/heads/Gmiddle && git cherry-pick FETCH_HEAD
```

**Pull**
```bash
git pull origin refs/heads/Gmiddle
```

</details>

*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*

<!-- WARNING: GHerrit relies on the following metadata to work properly. DO NOT EDIT OR REMOVE. --><!-- gherrit-meta: {"id":"Gmiddle","parent":"Groot","child":"Gtip"} -->
