src/pre_push/snapshots/gherrit__pre_push__body__tests__renders_sparse_patch_history.snap
---
source: src/pre_push/body.rs
expression: "body.render_with_history(HistoryTableFormat::Sparse)"
---
<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->



---

- 　  #33
- 👉 #22
- 　  #11


**Latest Update:** v6 — [Compare vs v5](/octo/widgets/compare/gherrit/Gmiddle/v5..gherrit/Gmiddle/v6)

<details>
<summary><strong>📚 Full Patch History</strong></summary>

*Links show the diff between the row version and the column version.*

|Version| v5 | v4 | v3 | v2 | v1 |Base|
|:---|:---|:---|:---|:---|:---|:---|
|v6|[vs v5](/octo/widgets/compare/gherrit/Gmiddle/v5..gherrit/Gmiddle/v6)|[vs v4](/octo/widgets/compare/gherrit/Gmiddle/v4..gherrit/Gmiddle/v6)|[vs v3](/octo/widgets/compare/gherrit/Gmiddle/v3..gherrit/Gmiddle/v6)|[vs v2](/octo/widgets/compare/gherrit/Gmiddle/v2..gherrit/Gmiddle/v6)|[vs v1](/octo/widgets/compare/gherrit/Gmiddle/v1..gherrit/Gmiddle/v6)|[vs Base](/octo/widgets/compare/Groot..gherrit/Gmiddle/v6)|
|v5||[vs v4](/octo/widgets/compare/gherrit/Gmiddle/v4..gherrit/Gmiddle/v5)||||[vs Base](/octo/widgets/compare/Groot..gherrit/Gmiddle/v5)|
|v4|||[vs v3](/octo/widgets/compare/gherrit/Gmiddle/v3..gherrit/Gmiddle/v4)|||[vs Base](/octo/widgets/compare/Groot..gherrit/Gmiddle/v4)|
|v3||||[vs v2](/octo/widgets/compare/gherrit/Gmiddle/v2..gherrit/Gmiddle/v3)||[vs Base](/octo/widgets/compare/Groot..gherrit/Gmiddle/v3)|
|v2|||||[vs v1](/octo/widgets/compare/gherrit/Gmiddle/v1..gherrit/Gmiddle/v2)|[vs Base](/octo/widgets/compare/Groot..gherrit/Gmiddle/v2)|
|v1||||||[vs Base](/octo/widgets/compare/Groot..gherrit/Gmiddle/v1)|

</details>
<details>
<summary><strong>⬇️ Download this PR</strong></summary>

######

**Branch**
```bash
git fetch origin refs/heads/Gmiddle && git checkout -b pr-Gmiddle FETCH_HEAD
```

**Checkout**
```bash
git fetch origin refs/heads/Gmiddle && git checkout FETCH_HEAD
```

**Cherry Pick**
```bash
git fetch origin refs/heads/Gmiddle && git cherry-pick FETCH_HEAD
```

**Pull**
```bash
git pull origin refs/heads/Gmiddle
```

</details>

*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*
